--- a/cv.html
+++ b/cv.html
@@ -18,10 +18,10 @@
 		<header class="masthead mb-auto">
 			<div class="inner">
 				<h3 class="masthead-brand">
-					<a href="index.html"><img height="42" src="img/immv.png"></a>
+					<a href="/"><img height="42" src="img/immv.png"></a>
 				</h3>
 				<nav class="nav nav-masthead justify-content-center">
-					<a class="nav-link" href="index.html">Home</a> <a
+					<a class="nav-link" href="/">Home</a> <a
 						class="nav-link active" href="cv.html">CV/Résumé</a> <a
 						class="nav-link" href="contact.html">Contact</a>
 				</nav>
