Update contents and bootstrap

--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
 <title>Manuel Moran Vaquero. Sysadmin &amp; Developer. MSc
 	Telecom Engineer</title>
 
-<link href="css/bootstrap.min.css?v=1000" rel="stylesheet">
+<link href="css/bootstrap.min.css?v=1001" rel="stylesheet">
 <link href="css/immv.css?v=1000" rel="stylesheet">
 <link rel="icon" href="img/immv.png" />
 <link rel="apple-touch-icon" href="img/immv.png" />
@@ -21,21 +21,21 @@
 					<a href="/"><img height="42" src="img/immv.png"></a>
 				</h3>
 				<nav class="nav nav-masthead justify-content-center">
-					<a class="nav-link" href="/">Home</a> <a
-						class="nav-link active" href="cv.html">CV/Résumé</a> <a
-						class="nav-link" href="contact.html">Contact</a>
+					<a class="nav-link" href="/">Home</a> <a class="nav-link active"
+						href="cv.html">CV/Résumé</a> <a class="nav-link"
+						href="contact.html">Contact</a>
 				</nav>
 			</div>
 		</header>
 
 		<main role="main" class="inner cover cv">
 			<h1>CV/Résumé</h1>
+
 			<h2 class="h4">Education</h2>
-			<p>Master in Telecommunications Engineering (EQF 7). University
-				of Vigo.</p>
+			<p>Telecommunications Engineer (Master-EQF7). University of Vigo.</p>
 			<h2 class="h4">Languages:</h2>
-			<p>Spanish (native), English C2 (CPE), German B2, Galician C1,
-				French A1</p>
+			<p>Spanish (native), English C2, German B2, Galician C1, French
+				A1</p>
 			<h2 class="h4">System administration skills</h2>
 			<p>Linux sysadmin since kernel 2.0.33 (december 1997)</p>
 
@@ -43,71 +43,65 @@
 				<tbody>
 					<tr>
 						<td>Microsoft</td>
-						<td>Windows Vista/7/8.1/10 and Windows Server 2003/2008/2012</td>
+						<td>Microsoft Windows, Windows Server</td>
 					</tr>
 					<tr>
-						<td>UNIX &#8211; GNU/Linux</td>
-						<td>CentOS 5/6/7, RHEL, Fedora, Debian, Ubuntu, Mint, SUSE</td>
-					</tr>
-					<tr>
-						<td>Client/server</td>
-						<td>Apache, CUPS, FTP, TFTP, SSH, SSL, DHCP, NTP, SNMP, rsync</td>
-					</tr>
-					<tr>
-						<td>Storage</td>
-						<td>NAS, SAN, iSCSI, multipath. LVM. CIFS. NFS. Dell
-							Poweredge. HP Storageworks</td>
-					</tr>
-					<tr>
-						<td>E-Mail</td>
-						<td>sendmail, postfix, dovecot, pop, imap</td>
+						<td>GNU/Linux</td>
+						<td>CentOS, RHEL, Fedora, Debian, Ubuntu, Mint, SUSE</td>
 					</tr>
 					<tr>
 						<td>System administration</td>
-						<td>Task automation. Performance tuning. Advanced support.
-							Server hardening. Firewalls, routing, proxy, iptables. WSUS.
-							Linux update mirrors</td>
+						<td>Task automation. Performance tuning and troubleshooting.
+							Advanced support. Server hardening. </td>
 					</tr>
 					<tr>
 						<td>Reliability</td>
-						<td>Monitoring tools (nagios, zabbix, cacti, check_mk). ELK.
-							Disk and component redundancy. Backup systems</td>
+						<td>ELK, nagios, zabbix, cacti, check_mk. Disk redundancy
+							and backup systems.</td>
 					</tr>
 					<tr>
 						<td>Networking</td>
-						<td>IP, TCP, UDP, ICMP, NAT, VLAN, port trunking, traffic
-							shaping</td>
+						<td>TCP/IP, UDP, ICMP, NAT, VLAN, port trunking, traffic
+							shaping, routing, firewalling</td>
+					</tr>
+					<tr>
+						<td>Public cloud</td>
+						<td>Cpanel hosting, VPS, Amazon AWS, Microsoft Azure
+							RemoteAPP</td>
+					</tr>
+					<tr>
+						<td>Private cloud</td>
+						<td>vmware, proxmox</td>
 					</tr>
 					<tr>
 						<td>Unattended deployment</td>
-						<td>Kickstart, clonezilla, sysprep, WDS, AIK, Acronis</td>
-					</tr>
+						<td>Kickstart, WDS, sysprep</td>
+					</tr>					
 					<tr>
-						<td>Authentication and domain services</td>
-						<td>Active Directory, Windows GPO and Domain administration,
-							SAMBA 3/4, OpenLDAP, 389-ds, PAM, apache auth, Web SSO
-							authentication environments</td>
-					</tr>
-					<tr>
-						<td>Virtualization</td>
-						<td>Vmware, proxmox</td>
-					</tr>
-					<tr>
-						<td>Cloud</td>
-						<td>Cpanel. VPS. Hybrid/dedicated. Amazon AWS. Microsoft
-							Azure RemoteAPP</td>
-					</tr>
+						<td>AD & Authentication</td>
+						<td>Active Directory administration, SAMBA 4 as AD, OpenLDAP,
+							PAM, SAML SSO</td>
+					</tr>					
 					<tr>
 						<td>Office and Multimedia</td>
 						<td>LaTeX, Microsoft Office (Word, Access, Excel,
-							Powerpoint), Visio, LibreOffice, gimp, audacity</td>
+							Powerpoint), Visio, LibreOffice, gimp, audacity, Cubase</td>
 					</tr>
 				</tbody>
 			</table>
-			<h2 class="h4">Development skills</h2>
-			<table class="table table-bordered">
 
+			<h2 class="h4">Development skills</h2>
+			<p>Corporate Applications Developer since 2015</p>
+			<table class="table table-bordered">
 				<tbody>
+					<tr>
+						<td>Front-end</td>
+						<td>HTML5, CSS3, Javascript, Bootstrap, Webpack</td>
+					</tr>
+					<tr>
+						<td>Back-end</td>
+						<td>PHP, Symfony Framework, SQL</td>
+					</tr>
 					<tr>
 						<td>Scripting</td>
 						<td>bash, perl, sed</td>
@@ -117,22 +111,25 @@
 						<td>C, C++, Java</td>
 					</tr>
 					<tr>
-						<td>Web</td>
-						<td>HTML, CSS, PHP, SQL, javascript, jquery, Bootstrap,
-							Webpack, Symfony Framework, Content Management Systems</td>
+						<td>Dependency management</td>
+						<td>composer, maven, npm, yarn</td>
 					</tr>
 					<tr>
 						<td>DBMS</td>
-						<td>MySQL, Oracle</td>
+						<td>MySQL, MariaDB</td>
 					</tr>
 					<tr>
-						<td>Tools</td>
-						<td>cvs, svn, git, git-flow, gitlab, composer, maven, eclipse</td>
+						<td>Testing</td>
+						<td>jmeter, testcafe</td>
+					</tr>
+					<tr>
+						<td>S-SDLC</td>
+						<td>Secure development lifecycles, OWASP. Fortify SAST
+							analysis.</td>
 					</tr>
 					<tr>
 						<td>Stats and SEO</td>
-						<td>Google Adsense, Google Analytics, Google Search Console.
-							Social networking strategies. SEO strategies</td>
+						<td>Google Adsense, Google Analytics, Google Search Console</td>
 					</tr>
 					<tr>
 						<td>Math tools</td>
@@ -140,31 +137,43 @@
 					</tr>
 					<tr>
 						<td>E-Book/Kindle</td>
-						<td>ePub, Mobi, Sigil, Kindle Direct Publishing</td>
+						<td>Kindle Direct Publishing. ePub. Mobi. Sigil.</td>
+					</tr>
+					<tr>
+						<td>CMS</td>
+						<td>Wordpress, Drupal, Moodle</td>
 					</tr>
 				</tbody>
 			</table>
+
 			<h2 class="h4">DevOps skills</h2>
+			<p>DevOps Engineer since 2016</p>
 			<table class="table table-bordered">
 
 				<tbody>
 					<tr>
-						<td>CI/CD &amp; Devops</td>
-						<td>Docker, Jenkins, Gitlab Continuous Integration</td>
+						<td>Tools</td>
+						<td>git, git-flow, gitlab, docker, docker-compose</td>
 					</tr>
 					<tr>
-						<td>Collaboration and ticketing tools</td>
-						<td>Jira, Confluence, Slack, Mattermost, Trello, Mediawiki</td>
+						<td>CI/CD</td>
+						<td>Gitlab CI, Jenkins</td>
+					</tr>
+					<tr>
+						<td>Teamwork</td>
+						<td>Jira, Confluence, Slack, Mattermost, Microsoft Teams,
+							Trello</td>
 					</tr>
 				</tbody>
 			</table>
+
 			<h2 class="h4">Other</h2>
 			<table class="table table-bordered">
-
 				<tbody>
 					<tr>
 						<td>IT Governance</td>
-						<td>ITIL Foundation, Service Transition, Service Operation</td>
+						<td>ITIL Foundation, Strategy, Service Design, Service
+							Transition, Service Operations, Continual Service Improvement</td>
 					</tr>
 					<tr>
 						<td>Secure Development</td>
@@ -172,7 +181,6 @@
 					</tr>
 				</tbody>
 			</table>
-
 		</main>
 
 		<footer class="mastfoot mt-auto">
