--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Manuel Moran Vaquero. Sysadmin &amp; Developer. MSc
 	Telecom Engineer</title>
 
-<link href="css/bootstrap.min.css?v=1000" rel="stylesheet">
+<link href="css/bootstrap.min.css?v=1001" rel="stylesheet">
 <link href="css/immv.css?v=1000" rel="stylesheet">
 <link rel="icon" href="img/immv.png" />
 <link rel="apple-touch-icon" href="img/immv.png" />
@@ -32,14 +32,12 @@
 
 
 			<h1 class="cover-heading">Manuel Morán Vaquero</h1>
-			<p class="lead">Sysadmin & Developer. Telecom Engineer</p>
+			<p class="lead">Linux expert &bull; Software developer &bull; Devops engineer</p>
 			<hr>
 
 
 
-			<p>Master in Telecommunications Engineering</p>
-
-			<p>Sysadmin. Developer. Linux systems expert</p>
+			<p>Telecommunications Engineer (Master-EQF7)</p>
 
 			<p>English (C2) · German (B2) · Spanish (native)</p>
 
